--- a/login/templates/index.html
+++ b/login/templates/index.html
@@ -9,7 +9,7 @@
 	<div id="menu">
 	<dl id="navigatie">
 	<dt><a href="index">Home</a></dt>
-	<dt><a href="login">Logout</a></dt>
+	<dt><a href="logout">Logout</a></dt>
 
 		</dl></br>
 	</br></br>
