--- a/login/templates/register.html
+++ b/login/templates/register.html
@@ -18,7 +18,7 @@
     <p>Repeat Password</p>
     <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-    <button type="submit" class="registerbtn">Register</button>
+    <button onclick="location.href = 'login';" type="submit" class="btn btn-default">Register</button>
   </div>
       <div class = "termsprivacy">
         <p>By creating an account you agree to our <a href="termsandprivacy">Terms & Privacy</a>.</p>
