--- a/login/templates/login.html
+++ b/login/templates/login.html
@@ -6,24 +6,22 @@
 </head>
 <body>
     <div class="loginbox">
-      <img src="" class="avatar">
-        <h1>Hier inloggen</h1><br>
+      <img src="static" class="avatar">
+        <h1>Login Here</h1><br>
         <form action="" method="post">
-          <p>Gebruikersnaam</p>
+          <p>Username</p>
           <input type="text" placeholder="Username" name="username" value="{{
             request.form.username }}">
-          <p>Wachtwoord</p>
+          <p>Password</p>
            <input type="password" placeholder="Password" name="password" value="{{
             request.form.password }}"><br><br>
           <input class="btn btn-default" type="submit" value="Login">
         </form>
           <button onclick="location.href = 'register';" type="submit" class="btn btn-default">Register</button>
-
         {% if error %}
           <p class="error"><strong>Error: <br></strong> {{error}}</p>
         {% endif%}
     </div>
-      <a href="/logineng"><img src="english.png"></a>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   </body>
 </html>
