--- a/login/static/login.css
+++ b/login/static/login.css
@@ -1,10 +1,10 @@
 body{
     background-image: url(pic1.jpg);
     background-size: auto;
-    background-position: top;
+    background-position top;
     background-repeat: no-repeat;
     font-family: "Times New Roman";
-    font-size: 115%;
+    font-size: 115%
 }
 
 .loginbox{
@@ -23,7 +23,7 @@ h1{
     margin: 0;
     padding: 10 10 10;
     font-size: 20px;
-    margin-left: 12%;
+    margin-left: 20%;
     font-family: "Times New Roman";
 }
 
@@ -71,7 +71,7 @@ h1{
   background: url(avatar.png);
   background-size: cover;
   width: 60%;
-  height: 20%;
+  height: 18%;
   border-radius: 60%;
   position: absolute;
   top: -20%;
